--- a/Teacher/lost_found.html
+++ b/Teacher/lost_found.html
@@ -191,6 +191,166 @@
       </div>
     </main>
   </div>
+  <script>
+document.addEventListener("DOMContentLoaded", () => {
+  const lostModal = document.getElementById("lostModal");
+  const foundModal = document.getElementById("foundModal");
+  const closeButtons = document.querySelectorAll(".close");
+  const lostSubmitBtn = lostModal.querySelector(".btn-submit");
+  const foundSubmitBtn = foundModal.querySelector(".btn-submit");
+  const cardGrid = document.querySelector(".card-grid");
+  const filterBtns = document.querySelectorAll(".filter-btn");
+
+  // Load existing data
+  let items = JSON.parse(localStorage.getItem("lostFoundItems")) || [];
+  renderItems();
+
+  // =======================
+  // 🔹 MODAL FUNCTIONALITY
+  // =======================
+  document.querySelectorAll('a[href="#lostModal"]').forEach(btn => {
+    btn.addEventListener("click", () => openModal(lostModal));
+  });
+
+  document.querySelectorAll('a[href="#foundModal"]').forEach(btn => {
+    btn.addEventListener("click", () => openModal(foundModal));
+  });
+
+  closeButtons.forEach(btn => {
+    btn.addEventListener("click", closeModals);
+  });
+
+  window.addEventListener("click", (e) => {
+    if (e.target.classList.contains("modal")) closeModals();
+  });
+
+  function openModal(modal) {
+    modal.style.display = "flex";
+  }
+
+  function closeModals() {
+    document.querySelectorAll(".modal").forEach(m => m.style.display = "none");
+  }
+
+  // =======================
+  // 🔹 ADD LOST ITEM
+  // =======================
+  lostSubmitBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    const name = document.getElementById("lost-item-name").value.trim();
+    const desc = document.getElementById("lost-desc").value.trim();
+    const loc = document.getElementById("lost-loc").value.trim();
+    const contact = document.getElementById("lost-contact").value.trim();
+
+    if (!name || !desc || !loc) return alert("Please fill in all required fields!");
+
+    const newItem = {
+      id: Date.now(),
+      type: "lost",
+      name,
+      desc,
+      loc,
+      contact,
+      date: new Date().toLocaleDateString()
+    };
+
+    items.push(newItem);
+    saveItems();
+    renderItems();
+    closeModals();
+    lostModal.querySelectorAll("input, textarea").forEach(i => i.value = "");
+  });
+
+  // =======================
+  // 🔹 ADD FOUND ITEM
+  // =======================
+  foundSubmitBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    const name = document.getElementById("found-item-name").value.trim();
+    const desc = document.getElementById("found-desc").value.trim();
+    const loc = document.getElementById("found-loc").value.trim();
+    const contact = document.getElementById("found-contact").value.trim();
+
+    if (!name || !desc || !loc) return alert("Please fill in all required fields!");
+
+    const newItem = {
+      id: Date.now(),
+      type: "found",
+      name,
+      desc,
+      loc,
+      contact,
+      date: new Date().toLocaleDateString()
+    };
+
+    items.push(newItem);
+    saveItems();
+    renderItems();
+    closeModals();
+    foundModal.querySelectorAll("input, textarea").forEach(i => i.value = "");
+  });
+
+  // =======================
+  // 🔹 RENDER ITEMS
+  // =======================
+  function renderItems(filter = "all") {
+    cardGrid.innerHTML = "";
+    const filteredItems = items.filter(item => 
+      filter === "all" ? true : item.type === filter
+    );
+
+    if (filteredItems.length === 0) {
+      cardGrid.innerHTML = `<p style="text-align:center;opacity:0.7;">No items to display.</p>`;
+      return;
+    }
+
+    filteredItems.forEach(item => {
+      const card = document.createElement("div");
+      card.classList.add("card");
+      card.innerHTML = `
+        <div class="card-header">
+          <h3>${item.name}</h3>
+          <span class="tag tag-${item.type}">${capitalize(item.type)}</span>
+        </div>
+        <p>${item.desc}</p>
+        <div class="card-meta">
+          <div class="meta-item"><strong>${item.type === "lost" ? "Last Seen:" : "Found At:"}</strong> ${item.loc}</div>
+          <div class="meta-item"><strong>Date:</strong> ${item.date}</div>
+        </div>
+        <div class="card-footer">
+          ${item.contact ? `<a href="mailto:${item.contact}">${item.type === "lost" ? "Contact Owner →" : "Contact Finder →"}</a>` : `<a href="#">View Details →</a>`}
+        </div>
+      `;
+      cardGrid.prepend(card);
+    });
+  }
+
+  // =======================
+  // 🔹 FILTER FUNCTIONALITY
+  // =======================
+  filterBtns.forEach(btn => {
+    btn.addEventListener("click", () => {
+      filterBtns.forEach(b => b.classList.remove("active"));
+      btn.classList.add("active");
+      const filterType = btn.textContent.toLowerCase().includes("lost")
+        ? "lost"
+        : btn.textContent.toLowerCase().includes("found")
+        ? "found"
+        : "all";
+      renderItems(filterType);
+    });
+  });
+
+  function saveItems() {
+    localStorage.setItem("lostFoundItems", JSON.stringify(items));
+  }
+
+  function capitalize(str) {
+    return str.charAt(0).toUpperCase() + str.slice(1);
+  }
+});
+</script>
+
 </body>
 
 </html>
