--- a/Student/student-attendance.html
+++ b/Student/student-attendance.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="subject-card">
                             <div class="card-header">
-                                <h4>Elec. Engineering (FEE II)</h4>
+                                <h4>Front-End Engineering (FEE II)</h4>
                                 <span class="subject-percentage high">100%</span>
                             </div>
                             <p class="subject-stats">Attended 2 of 2 classes held</p>
